--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -25,6 +25,7 @@
   "rules": {
     "class-methods-use-this": "off",
     "comma-dangle": "off",
+    "import/order": "off",
     "jsx-quotes": ["error", "prefer-single"],
     "lines-between-class-members": "off",
     "max-len": ["error", { "code": 120 }],
@@ -38,5 +39,12 @@
     "react/jsx-props-no-spreading": "off",
     "react/sort-comp": "off",
     "react/static-property-placement": "off"
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".js.flow", ".jsx", ".ts", ".tsx"]
+      }
+    }
   }
 }
