--- a/client/.flowconfig
+++ b/client/.flowconfig
@@ -1,13 +1,12 @@
 [ignore]
 
 [include]
-../node_modules/
+./node_modules/
 
 [libs]
 
 [lints]
 
 [options]
-esproposal.optional_chaining=enable
 
 [strict]
