--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "flow-bin": "^0.149.0",
     "i18next": "^20.2.1",
     "react": "^17.0.2",
-    "react-components": "git+ssh://git@react-components:performant-software/react-components.git",
+    "react-components": "git+ssh://git@react-components:performant-software/react-components.git#feature/basira22_works_of_art",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.8.13",
     "react-router-dom": "^5.2.0",
@@ -19,6 +18,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "underscore": "^1.13.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -50,6 +50,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "flow-bin": "^0.133.0"
   }
 }
