--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "npm": "6.13.4"
   },
   "scripts": {
-    "build": "cd client && npm install && npm run build && cd ..",
+    "build": "cd client && yarn install && yarn run build && cd ..",
     "deploy": "cp -a client/build/. public/",
-    "dev-build": "cd client && npm run build && cd ..",
     "heroku-prebuild": "bash ./scripts/preinstall.sh"
   }
 }
