--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "yarn": "1.x"
   },
   "scripts": {
-    "build": "cd client && yarn install && yarn run build && cd ..",
+    "build": "yarn --cwd client install && yarn --cwd client run build && cd ..",
     "deploy": "cp -a client/build/. public/",
     "heroku-prebuild": "bash ./scripts/preinstall.sh"
   }
