BASIRA #22 - Adding Heroku post-build to package.json

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "yarn --cwd client install && yarn --cwd client run build && cd ..",
     "deploy": "cp -a client/build/. public/",
-    "heroku-prebuild": "bash ./scripts/preinstall.sh"
+    "heroku-prebuild": "bash ./scripts/preinstall.sh",
+    "heroku-postbuild": "yarn build && yarn deploy"
   }
 }
