--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-i18next": "^11.8.13",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-uuid": "^1.0.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "underscore": "^1.13.1",
