--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "BASIRA",
   "license": "MIT",
   "engines": {
-    "node": "14.15.x",
+    "node": "16.17.0",
     "yarn": "1.x"
   },
   "scripts": {
