upgrade to react-scripts 5

--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "@babel/eslint-parser": "^7.21.3",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
@@ -19,7 +20,7 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.8.13",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "react-uuid": "^1.0.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
@@ -28,8 +29,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "PORT=3000 react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "start": "PORT=3000 react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -51,6 +52,11 @@
     ]
   },
   "devDependencies": {
-    "flow-bin": "^0.133.0"
+    "buffer": "npm:buffer@6.0.3",
+    "flow-bin": "^0.133.0",
+    "stream": "npm:stream-browserify@3.0.0"
+  },
+  "resolutions": {
+    "semantic-ui-css": "2.5.0"
   }
 }
