BASIRA #161 - Upgrade Node, Rails, and Ruby, for Heroku stack upgrade (#170)
* upgrade to Rails 7 and Ruby 3.2

* upgrade to Node 16

* disable linting rules that broke after node 16 upgrade

* node 18

* Rails 7 activestorage migration

* load 7.0 defaults in application.rb

* upgrade to react-scripts 5

* fix homepage image limit issue

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -11,7 +11,7 @@
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
   },
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
     "ecmaFeatures": {
         "jsx": true
@@ -38,7 +38,9 @@
     "react/prefer-stateless-function": "off",
     "react/jsx-props-no-spreading": "off",
     "react/sort-comp": "off",
-    "react/static-property-placement": "off"
+    "react/static-property-placement": "off",
+    "template-curly-spacing": "off",
+    "indent": "off"
   },
   "settings": {
     "import/resolver": {
