--- a/client/package.json
+++ b/client/package.json
@@ -29,8 +29,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "PORT=3000 react-scripts start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && PORT=3000 react-scripts start",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
