--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "@babel/eslint-parser": "^7.21.3",
+    "buffer": "npm:buffer@6.0.3",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -24,6 +25,7 @@
     "react-uuid": "^1.0.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
+    "stream": "npm:stream-browserify@3.0.0",
     "underscore": "^1.13.1",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
@@ -52,9 +54,7 @@
     ]
   },
   "devDependencies": {
-    "buffer": "npm:buffer@6.0.3",
-    "flow-bin": "^0.133.0",
-    "stream": "npm:stream-browserify@3.0.0"
+    "flow-bin": "^0.133.0"
   },
   "resolutions": {
     "semantic-ui-css": "2.5.0"
