--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "i18next": "^20.2.1",
+    "instantsearch.js": "^4.56.1",
+    "rc-slider": "^10.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.8.13",
