--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -26,7 +26,7 @@ services:
       DATABASE_USER: basira
       DATABASE_PASSWORD: basira
       DATABASE_NAME: basira_develop
-    entrypoint: /app/docker-entrypoint.sh
+    entrypoint: /app/docker-entrypoint.dev.sh
     ports:
       - "3001:3001"
     working_dir: /app
