--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,7 +1,7 @@
 # Use the Ruby 3.2.2 image from Docker Hub as the base image (https://hub.docker.com/_/ruby)
 FROM ruby:3.2.2
 
-RUN apt-get update -qq && apt-get install -y nodejs postgresql-client git
+RUN apt-get update -qq && apt-get install -y nodejs postgresql-client git libvips
 
 WORKDIR /app
 
