BASIRA #215 - Moving Typesense data to /tmp

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -51,4 +51,4 @@ services:
       - "8108:8108"
     restart: on-failure
     volumes:
-      - ./typesense/data:/data
+      - ./tmp/typesense/data:/data
