BASIRA #217 - Adding container for Nginx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,3 +39,12 @@ services:
     restart: on-failure
     volumes:
       - ./tmp/typesense/data:/data
+  nginx:
+    build:
+      context: .
+      dockerfile: Dockerfile.nginx
+    container_name: basira-nginx
+    depends_on:
+      - app
+    ports:
+      - 80:80
