--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.21.3",
     "@babel/runtime": "^7.22.3",
-    "@performant-software/semantic-components": "^1.0.17",
-    "@performant-software/shared-components": "^1.0.17",
+    "@performant-software/semantic-components": "^1.0.18-beta.7",
+    "@performant-software/shared-components": "^1.0.18-beta.7",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -19,7 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.8.13",
-    "react-instantsearch-hooks-web": "^6.44.2",
+    "react-instantsearch-hooks-web": "^6.47.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "react-uuid": "^1.0.2",
