BASIRA #253 - Adding "REACT_APP_TYPESENSE_COLLECTION_NAME" as environment variable

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ DATABASE_NAME=basira
 ESLINT_NO_DEV_ERRORS=true
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzzzzzz
 REACT_APP_TYPESENSE_API_KEY=Lbk0000000
+REACT_APP_TYPESENSE_COLLECTION_NAME=documents
 REACT_APP_TYPESENSE_HOST=localhost
 REACT_APP_TYPESENSE_PORT=8108
 REACT_APP_TYPESENSE_PROTOCOL=http
