--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.21.3",
     "@babel/runtime": "^7.22.3",
-    "@performant-software/semantic-components": "^1.0.25",
-    "@performant-software/shared-components": "^1.0.25",
+    "@performant-software/semantic-components": "^2.2.17-beta.0",
+    "@performant-software/shared-components": "^2.2.17-beta.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -17,6 +17,8 @@
     "instantsearch.js": "^4.56.1",
     "rc-slider": "^10.2.0",
     "react": "^18.2.0",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.8.13",
     "react-instantsearch-hooks-web": "^6.47.3",
