--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.21.3",
     "@babel/runtime": "^7.22.3",
-    "@performant-software/semantic-components": "^2.2.20-beta.6",
-    "@performant-software/shared-components": "^2.2.20-beta.6",
+    "@performant-software/semantic-components": "^2.2.20",
+    "@performant-software/shared-components": "^2.2.20",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
